--- a/src/_components/Header.less
+++ b/src/_components/Header.less
@@ -1,97 +1,98 @@
 @import '../_variables';
 
 @main-menu-height: 85px;
-@sub-menu-height: 70px;
+@sub-menu-height : 70px;
 
 
 header.header {
     background: @delivery_header_red;
-    position: relative;
-    z-index: 1000;
+    position  : relative;
+    z-index   : 1000;
 
     ul {
-        clear: both;
-        margin: 0;
-        padding: 0;
+        margin    : 0;
+        padding   : 0;
         list-style: none;
-        color: @vst_white;
+        color     : @vst_white;
 
         li {
-            margin: 0 30px;
-            padding: 0;
-        }
-
-        a {
-            color: @delivery_white;
-            line-height: @main-menu-height;
+            margin    : 0 30px;
+            padding   : 0;
         }
     }
 
     ul.mainMenu {
-        padding-left: 35%;
-        height: @main-menu-height;
 
-        li{
+        display: inline-block;
+        height : @main-menu-height;
+
+        li {
             font-size: 25px;
-            display: inline-block;
+            display  : inline-block;
 
-            &:hover {
-                font-weight: bold;
-
-                ul.subMenu{
-                    display: block;
-                    font-weight: normal;   
-                }
+            a {
+                color      : @delivery_white;
+                line-height: @main-menu-height;
+                display: inline-block;
             }
 
-            :hover{
-                color: @delivery_white;
+            &.hover {
+                ul.subMenu {
+                    display: block;
+                }
             }
         }
     }
 
     ul.subMenu {
+        display           : none;
+        background        : rgba(250, 251, 252, 0.8);
+        position          : absolute;
+        height            : auto;
 
-        display: none;
-        background: rgba(250, 251, 252, 0.8);
-        position: absolute;
-        height: auto;
-        width: max(200px);
-        top: 100px;
-        // width: 20%;
-        // padding-left: 20%;
-        
 
-    li{ 
+        li {
             font-size: 22px;
-            //color: @delivery_dark_gray;
-            display: block;
+            display  : block;
+            margin: 0;
             
-            
+            a {
+                color  : @delivery_dark_gray;
+                line-height: @main-menu-height / 1.3; 
+                display: block;
+                padding: 0 30px;
+            }
+
             :hover {
-                color: @delivery_black;
-                font-weight: bold;
+                color      : @delivery_black;
             }
         }
 
-    }        
+    }
 
-    // .logo{
-    //     height: 55px;
-    //     float: left;
-    //     margin-left: 55px;
-    //     margin-top: 25px; 
-    // }
+    #user {
+        position: absolute;
+        right   : 55px;
+        top     : 25px;
+        color   : white;
+    }
+
+    #logo {
+        line-height : @main-menu-height;
+        float       : left;
+        margin-left : 30px;
+        margin-right: 30px;
+    }
 
     // .user{
-    //     height: 40px;
-    //     float: right;
+    //     height      : 40px;
+    //     float       : right;
     //     margin-right: 55px;
-    //     margin-top: 40px; 
+    //     margin-top  : 40px; 
     // }
 
     a.active {
-        color: @delivery_white;
-        font-weight: bolder;
+        color      : @delivery_white;
+        font-weight: bold;
     }
-    }
+}
