--- a/src/_components/Footer.less
+++ b/src/_components/Footer.less
@@ -4,15 +4,20 @@
     background: @delivery_footer_gray;
     height: 200px ;
     width: 100%;
+
+    a{
+        color: @delivery_white;
+    }
 }
 
-.logo-footer{
+#logo-footer{
     // max-width: 325px;
     // width: 18%;
     // height: 60%;
-    float: left;
-    padding-top: 50px;
-    margin-left: 55px;
+    float       : left;
+    margin-left : 30px;
+    margin-right: 30px;
+    align-self: center;
 }
 
 .footer-grid {
