--- a/src/CalculateDeriveryPage/CalculateDeliveryPage.less
+++ b/src/CalculateDeriveryPage/CalculateDeliveryPage.less
@@ -7,11 +7,14 @@
 }
 
 .ui.placeholder.segment{
-
     background-color: rgba(255, 255, 255, .9);
-     //padding: 40px 0;
-    height:500px ;
     width: 850px;
     margin: 0 auto;
 }
 
+.calculate_map {
+    width: 100%;
+    height: 300px;
+    position: relative;
+    outline: 1px solid @vst_gray;
+}
