implemented Home Page

--- a/src/_components/Header.less
+++ b/src/_components/Header.less
@@ -96,3 +96,21 @@ header.header {
         font-weight: bold;
     }
 }
+
+.ui.primary.button {
+    color: white;
+    background: transparent;
+    border: 2px solid white;
+    border-radius: 45px;
+    font-size: 22px;
+    font-weight: normal;
+
+    &:hover{
+        background-color: white ;
+        color: @delivery_header_red;
+    }
+
+    &:active{
+        background-color: transparent;
+    }
+  }
