--- a/src/CalculateDeriveryPage/CalculateDeliveryPage.less
+++ b/src/CalculateDeriveryPage/CalculateDeliveryPage.less
@@ -1,15 +1,16 @@
 @import '../_variables';
 
-.calculate_form{
-    background:url(/images/calculator.jpg) no-repeat ;
-    height    : 700px;
-    padding-top: 120px;
+.calculate_form {
+    background : url(/images/calculator.jpg) no-repeat;
+    height     : 800px;
+    padding-top: 100px;
 }
 
 .ui.placeholder.segment{
     background-color: rgba(255, 255, 255, .9);
     width: 850px;
     margin: 0 auto;
+    padding-bottom: 100px;
 }
 
 .calculate_map {
@@ -17,4 +18,13 @@
     height: 300px;
     position: relative;
     outline: 1px solid @vst_gray;
+}
+
+h2 {
+    padding-top   : 60px;
+    padding-bottom: 50px;
+    font-size     : 30px;
+    color         : brown;
+    font-weight   : bold;
+    text-align    : center;
 }
