--- a/src/_components/Footer.less
+++ b/src/_components/Footer.less
@@ -2,7 +2,8 @@
 
 .footer{
     background: @delivery_footer_gray;
-    height: 200px ;
+    padding-top: 30px;
+    height: 160px ;
     width: 100%;
 
     a{
@@ -11,9 +12,6 @@
 }
 
 #logo-footer{
-    // max-width: 325px;
-    // width: 18%;
-    // height: 60%;
     float       : left;
     margin-left : 30px;
     margin-right: 30px;
@@ -29,7 +27,7 @@
 
         li {
             color: @delivery_white;
-            font-size: 30px;
+            font-size: 28px;
             margin-bottom: 20px;
 
             ul {
@@ -41,9 +39,6 @@
                 }
             }
         }
-
-        
-        
     }
 
     .row {
