Started admin integration

--- a/src/CalculateDeriveryPage/CalculateDeliveryPage.less
+++ b/src/CalculateDeriveryPage/CalculateDeliveryPage.less
@@ -28,3 +28,14 @@ h2 {
     font-weight   : bold;
     text-align    : center;
 }
+
+.price{
+    //font-weight: bold;
+    margin-left: 45px;
+}
+
+.note{
+    margin-top: 10px ;
+    font-size: 13px;
+    font-style: italic ;
+}
